# vish.bio

./: .gitignore  Cargo.toml  Dockerfile  fly.toml  package.json  postcss.config.js  tailwind.config.js
assets/: .gitignore  main.css  main.generated.css  tailwind.generated.css
src/: main.rs
src/pages/: index.rs
templates/components/: header.html
templates/pages/: index.html
